<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>web_server_launcher</name>
  <version>0.1.0</version>
  <description>Simple Web server Launch package for rosbridge library</description>
  <maintainer email="marcos@tracsense.tech">Marcos Moura</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>  

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
